--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 
-
 disqus_ID : disqus_vvvEQyTWgg
 # Welcome to Jekyll!
 #
@@ -28,7 +27,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Honey Lapin"
 description              : "An amazing website."
-url                      : https://pluie7dev.github.io/honeylapin/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://pluie7dev.github.io/ST-PROJECT-TOOLS # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -114,28 +113,27 @@ analytics:
 
 # Site Author
 author:
-  name             : "STUDY"
+  name             : " "
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
                    
   
  
   links:
-    #- label: "Email"
-    #  icon: "fas fa-fw fa-envelope-square"
-      # url: mailto:pluie7j@gmail.com
-    
-     
-      - label: "INVEST"
+    - label: "ST-JAVA-SPRING-SQL"
       icon: "fas fa-fw fa-link"
-      url: "https://your-website.com"
-      
-    - label: "DEV"
+      url: "https://pluie7dev.github.io/ST-JAVA-SPRING-SQL"
+    - label: "ST-SERVER-CONN"
       icon: "fas fa-fw fa-link"
-      url: "https://pluie7dev.github.io/honeylapin/"  
-           
-    - label: "PRIVATE"
+      url: "https://pluie7dev.github.io/ST-SERVER-CONN"
+    - label: "ST-ALG-KERAS"
       icon: "fas fa-fw fa-link"
-      url: "https://github.com/pluie7dev/private"
+      url: "https://pluie7dev.github.io/ST-ALG-KERAS"
+    - label: "ST-VIEW"
+      icon: "fas fa-fw fa-link"
+      url: "https://pluie7dev.github.io/ST-VIEW"
+    - label: "ST-PROJECT-TOOLS"
+      icon: "fas fa-fw fa-link"
+      url: "https://pluie7dev.github.io/ST-PROJECT-TOOLS"
     
  
  
